Migrate some client APIs